fixed overlap of navigation menu on add task oage

--- a/css/add-task-page.css
+++ b/css/add-task-page.css
@@ -247,7 +247,7 @@
         width: 100%;
         height: auto;
         overflow-y: visible;
-        padding-right: 0;
+        padding-right: 4px;
     }
 
     .page-form .form-group input#taskTitle {
